random ahh changes
hell nah

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     </nav>
   </header>
   
-  
   <main>
     <div class="vignette hide"></div>
     <img src="img/background.png" data-speedx="0.3" data-speedy="0.38" data-speedz="0" data-rotation="0"
@@ -94,7 +93,7 @@
           <h4>Main Menu</h4>
           <li>
             <span class="material-symbols-outlined">dashboard</span>
-            <a href="#">gallery</a>
+            <a href="./gallery.html">gallery</a>
           </li>
           <li>
             <span class="material-symbols-outlined">show_chart</span>
@@ -102,25 +101,13 @@
           </li>
           <li>
             <span class="material-symbols-outlined">flag</span>
-            <a href="#">service</a>
+            <a href="service.html">service</a>
           </li>
           <hr>
           <h4>Advanced</h4>
           <li>
-            <span class="material-symbols-outlined">person</span>
-            <a href="#">Designer</a>
-          </li>
-          <li>
             <span class="material-symbols-outlined">group</span>
             <a href="#">Mentorship</a>
-          </li>
-          <li>
-            <span class="material-symbols-outlined">ambient_screen</span>
-            <a href="#">Video</a>
-          </li>
-          <li>
-            <span class="material-symbols-outlined">monitoring</span>
-            <a href="#">Analytic</a>
           </li>
           <hr>
           <h4>Account</h4>
