--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    <link rel="icon" type="image/png" href="./img/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -73,10 +76,10 @@
             <label for="slide12"></label>
         </div>
         <div class="slider">
-            <div class="slide" for="slide1" style="--img:url('IMG_4390.jpg')">
+            <div class="slide" for="slide1" style="--img:url('./img/1.png')">
                 <div class="content">
-                    <h2>Gojo</h2>
-                    <p>I alone am the honoured one</p>
+                    <h2>Wedding</h2>
+                    <p>photography for wedding events</p>
                 </div>
             </div>
             <div class="slide" for="slide2" style="--img:url('IMG_4391.jpg')">
