--- a/about.html
+++ b/about.html
@@ -69,7 +69,15 @@
 </section>
 
 <section class="gallery">
-
+    <div class="image-1">
+        <img src="./img/20240323_103600.jpg" alt="Image 1">
+    </div>
+    <div class="image-2">
+        <img src="./img/Image_20240510_170219_846 (1).jpeg" alt="Image 2">
+    </div>
+    <div class="image-3">
+        <img src="./img/Image_20240510_170402_094.jpeg" alt="Image 3">
+    </div>
 </section>
 
 
