3 stuff that didn't add for sum reason???
WEIRDDDD???

--- a/service.html
+++ b/service.html
@@ -36,38 +36,52 @@
 </ul>
 </nav>
 </header>
+    
 
-<main>
-    <div class="card" data-tilt>
-        <div class="wrapper">
-            <div class="profile">
-                <!-- <img src="profile.jpg" alt=""> -->
-            </div>
-            <h2>Mr. Noman</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-            <a href="#">Follow</a>
+<div class="card" data-tilt>
+    <div class="wrapper">
+        <div class="profile">
+            <img src="profile.jpg" alt="">
         </div>
+        <h2>Offer1</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+        <a href="#">N/A</a>
     </div>
-    <div class="card" data-tilt>
-        <div class="wrapper">
-            <div class="profile">
-                <!-- <img src="profile.jpg" alt=""> -->
-            </div>
-            <h2>Mr. Noman</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-            <a href="#">Follow</a>
+</div>
+
+<div class="card" data-tilt>
+    <div class="wrapper">
+        <div class="profile">
+            <img src="profile.jpg" alt="">
         </div>
+        <h2>Offer2</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+        <a href="#">N/A</a>
     </div>
-    <div class="card" data-tilt>
-        <div class="wrapper">
-            <div class="profile">
-                <!-- <img src="profile.jpg" alt=""> -->
-            </div>
-            <h2>Mr. Noman</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-            <a href="#">Follow</a>
+</div>
+
+<div class="card" data-tilt>
+    <div class="wrapper">
+        <div class="profile">
+            <img src="profile.jpg" alt="">
         </div>
+        <h2>Offer3</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+        <a href="#">N/A</a>
     </div>
+</div>
+
+<div class="card" data-tilt>
+    <div class="wrapper">
+        <div class="profile">
+            <img src="profile.jpg" alt="">
+        </div>
+        <h2>Offer4</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+        <a href="#">N/A</a>
+    </div>
+</div>
+
 <div class="vignette hide"></div>
 <img src="img/360_F_277268851_gf1sqxszssfMlPasgqvjtf2ddwMKmeLI.jpg" data-speedx="0.3" data-speedy="0.38" data-speedz="0" data-rotation="0"
     data-distance="-200" class="parallax bg-img">
