--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
           </li>
           <li>
             <span class="material-symbols-outlined">show_chart</span>
-            <a href="about.html">about</a>
+            <a href="./about.html">about</a>
           </li>
           <li>
             <span class="material-symbols-outlined">flag</span>
-            <a href="service.html">service</a>
+            <a href="./service.html">service</a>
           </li>
           <hr>
           <h4>Advanced</h4>
@@ -117,7 +117,7 @@
           </li>
           <li>
             <span class="material-symbols-outlined">mail</span>
-            <a href="#">Message</a>
+            <a href="./contact.html">Message</a>
           </li>
           <li>
             <span class="material-symbols-outlined">settings</span>
