--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
           <h4>Account</h4>
           <li>
             <span class="material-symbols-outlined">bar_chart</span>
-            <a href="#">Overview</a>
+            <a href="overview.html">Overview</a>
           </li>
           <li>
             <span class="material-symbols-outlined">mail</span>
-            <a href="./contact.html">Message</a>
+            <a href="contact.html">Message</a>
           </li>
           <li>
             <span class="material-symbols-outlined">settings</span>
