--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ShutterScope</title>
-<link rel="stylesheet" type="text/css" href="service.css">
+<link rel="stylesheet" type="text/css" href="contact.css">
 <link rel="icon" type="image/png" href="./img/favicon-16x16.png">
 
 </head>
@@ -36,73 +36,28 @@
 </ul>
 </nav>
 </header>
-    
-
-<div class="card" data-tilt>
-    <div class="wrapper">
-        <div class="profile">
-            <img src="profile.jpg" alt="">
-        </div>
-        <h2>Offer1</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-        <a href="#">N/A</a>
-    </div>
-</div>
-
-<div class="card" data-tilt>
-    <div class="wrapper">
-        <div class="profile">
-            <img src="profile.jpg" alt="">
-        </div>
-        <h2>Offer2</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-        <a href="#">N/A</a>
-    </div>
-</div>
-
-<div class="card" data-tilt>
-    <div class="wrapper">
-        <div class="profile">
-            <img src="profile.jpg" alt="">
-        </div>
-        <h2>Offer3</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-        <a href="#">N/A</a>
-    </div>
-</div>
-
-<div class="card" data-tilt>
-    <div class="wrapper">
-        <div class="profile">
-            <img src="profile.jpg" alt="">
-        </div>
-        <h2>Offer4</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-        <a href="#">N/A</a>
-    </div>
-</div>
 
 <div class="vignette hide"></div>
 <!-- <img src="img/360_F_277268851_gf1sqxszssfMlPasgqvjtf2ddwMKmeLI.jpg" data-speedx="0.3" data-speedy="0.38" data-speedz="0" data-rotation="0"
     data-distance="-200" class="parallax bg-img"> -->
 <!-- <img src="img/fog_7.png" data-speedx="0.27" data-speedy="0.32" data-speedz="0" data-rotation="0" data-distance="850"
     class="parallax fog-7"> -->
-<img src="img/Untitled-design-2023-08-10T093341.090-removebg-preview.png" data-speedx="0.195" data-speedy="0.305" data-speedz="0" data-rotation="0"
+<img src="./img/buac18-img-sunsky-poster.png" data-speedx="0.195" data-speedy="0.305" data-speedz="0" data-rotation="0"
     data-distance="1100" class="parallax mountain-10">
 <!-- <img src="img/fog_6.png" data-speedx="0.25" data-speedy="0.28" data-speedz="0" data-rotation="0"
     data-distance="1400" class="parallax fog-6"> -->
-<img src="img/unnamed__2_-removebg-preview (1).png" data-speedx="0.125" data-speedy="0.155" data-speedz="0.15" data-rotation="0.02"
+<img src="./img/unnamed-removebg-preview (1).png" data-speedx="0.125" data-speedy="0.155" data-speedz="0.15" data-rotation="0.02"
     data-distance="1700" class="parallax mountain-9">
-<img src="./img/01_Keith_Isaacs_Short_Mountain_House_SPA-removebg-preview (1).png" data-speedx="0.1" data-speedy="0.11" data-speedz="0" data-rotation="0.02"
+<img src="./img/unnamed-removebg-preview.png" data-speedx="0.1" data-speedy="0.11" data-speedz="0" data-rotation="0.02"
     data-distance="1800" class="parallax mountain-8">
 <div class="text parallax" data-speedx="0.07" data-speedy="0.07" data-speedz="0" data-rotation="0.11">
     <h2>ShutterScope</h2>
     <h1>Studios</h1>
 </div>
-<img src="./img/What-trees-do-for-our-planet-1080x675-ai-brush-removebg-cm0ll5ti.png" data-speedx="0.0235" data-speedy="0.013" data-speedz="0.42" data-rotation="0.15"
+<img src="./img/image_2024-05-13_210444091-removebg-preview (1).png" data-speedx="0.0235" data-speedy="0.013" data-speedz="0.42" data-rotation="0.15"
     data-distance="3800" class="parallax mountain-2">
-<img src="img/unnamed__2_-removebg-preview.png" data-speedx="0.027" data-speedy="0.018" data-speedz="0.53" data-rotation="0.2"
-    data-distance="4000" class="parallax mountain-1">
+<!-- <img src="./img/istockphoto-655345632-612x612-removebg-preview.png" data-speedx="0.027" data-speedy="0.018" data-speedz="0.53" data-rotation="0.2"
+    data-distance="4000" class="parallax mountain-1"> -->
 <img src="img/sun_rays.png" class="sun-rays hide">
 <img src="img/black_shadow.png" class="black-shadow hide">
 <!-- <img src="img/fog_1.png" data-speedx="0.12" data-speedy="0.01" data-speedz="0" data-rotation="0"
