created a pop up text with a glassy background

--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,9 @@
                 </ul>
             </nav>
         </header>
-        
+        <div class="fadeInText">
+            <h2>BLAHBLAHBLAH</h2>
+        </div>
     <!-- <h1 class="title">Title</h1> -->
     <div class="container">
         <input id="slide1" type="radio" name="group" checked/>
