DOMAIN EXSPANSION INFINITE VOID
THIS IS THE INNER WORLD OF LIMITLESS EVERY ACT IS REPEATED OVER AND OVER AGAIN

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     <h2>ShutterScope</h2>
     <h1>Studios</h1>
 </div>
-<img src="./img/image_2024-05-13_210444091-removebg-preview (1).png" data-speedx="0.0235" data-speedy="0.013" data-speedz="0.42" data-rotation="0.15"
+<img src="./img/ferris-wheel-transparent.png" data-speedx="0.0235" data-speedy="0.013" data-speedz="0.42" data-rotation="0.15"
     data-distance="3800" class="parallax mountain-2">
 <!-- <img src="./img/istockphoto-655345632-612x612-removebg-preview.png" data-speedx="0.027" data-speedy="0.018" data-speedz="0.53" data-rotation="0.2"
     data-distance="4000" class="parallax mountain-1"> -->
