--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
             </nav>
         </header>
         <div class="fadeInText">
-            <h2>BLAHBLAHBLAH</h2>
+            <h2>Use the left and right arrow keys <br> to switch slides!</h2>
         </div>
     <!-- <h1 class="title">Title</h1> -->
     <div class="container">
