--- a/contact.html
+++ b/contact.html
@@ -37,41 +37,94 @@
 </nav>
 </header>
 
+
+<section>
+    <div class="container">
+        <h2>ShutterScope Contact Form</h2>
+        <div class="row100">
+        <div class="col">
+            <div class="inputBox">
+            <input type="text" name="" required="required">
+            <span class="text">First Name</span>
+            <span class="line"></span>
+            </div>
+        </div>
+        <div class="col">
+            <div class="inputBox">
+            <input type="text" name="" required="required">
+            <span class="text">Last Name</span>
+            <span class="line"></span>
+            </div>
+        </div>
+        </div>
+        <div class="row100">
+        <div class="col">
+            <div class="inputBox">
+            <input type="text" name="" required="required">
+            <span class="text">Email</span>
+            <span class="line"></span>
+            </div>
+        </div>
+        <div class="col">
+            <div class="inputBox">
+            <input type="text" name="" required="required">
+            <span class="text">Mobile</span>
+            <span class="line"></span>
+            </div>
+        </div>
+        </div>
+        <div class="row100">
+        <div class="col">
+            <div class="inputBox textarea">
+            <textarea required="required"></textarea>
+            <span class="text">Type Your Message Here...</span>
+            <span class="line"></span>
+            </div>
+        </div>
+        </div>
+        <div class="row100">
+        <div class="col">
+            <input type="submit" value="Send">
+        </div>
+        </div>
+    </div> 
+    </section>
+
 <div class="vignette hide"></div>
 <!-- <img src="img/360_F_277268851_gf1sqxszssfMlPasgqvjtf2ddwMKmeLI.jpg" data-speedx="0.3" data-speedy="0.38" data-speedz="0" data-rotation="0"
-    data-distance="-200" class="parallax bg-img"> -->
+data-distance="-200" class="parallax bg-img"> -->
 <!-- <img src="img/fog_7.png" data-speedx="0.27" data-speedy="0.32" data-speedz="0" data-rotation="0" data-distance="850"
-    class="parallax fog-7"> -->
+class="parallax fog-7"> -->
 <img src="./img/buac18-img-sunsky-poster.png" data-speedx="0.195" data-speedy="0.305" data-speedz="0" data-rotation="0"
-    data-distance="1100" class="parallax mountain-10">
+data-distance="1100" class="parallax mountain-10">
 <!-- <img src="img/fog_6.png" data-speedx="0.25" data-speedy="0.28" data-speedz="0" data-rotation="0"
-    data-distance="1400" class="parallax fog-6"> -->
-<img src="./img/unnamed-removebg-preview (1).png" data-speedx="0.125" data-speedy="0.155" data-speedz="0.15" data-rotation="0.02"
-    data-distance="1700" class="parallax mountain-9">
+data-distance="1400" class="parallax fog-6"> -->
+<img src="./img/sky-removebg-preview.png" data-speedx="0.125" data-speedy="0.155" data-speedz="0.15" data-rotation="0.02"
+data-distance="1700" class="parallax mountain-9">
 <img src="./img/unnamed-removebg-preview.png" data-speedx="0.1" data-speedy="0.11" data-speedz="0" data-rotation="0.02"
-    data-distance="1800" class="parallax mountain-8">
+data-distance="1800" class="parallax mountain-8">
 <div class="text parallax" data-speedx="0.07" data-speedy="0.07" data-speedz="0" data-rotation="0.11">
-    <h2>ShutterScope</h2>
-    <h1>Studios</h1>
+<h2>ShutterScope</h2>
+<h1>Studios</h1>
 </div>
 <img src="./img/ferris-wheel-transparent.png" data-speedx="0.0235" data-speedy="0.013" data-speedz="0.42" data-rotation="0.15"
-    data-distance="3800" class="parallax mountain-2">
+data-distance="3800" class="parallax mountain-2">
 <!-- <img src="./img/istockphoto-655345632-612x612-removebg-preview.png" data-speedx="0.027" data-speedy="0.018" data-speedz="0.53" data-rotation="0.2"
-    data-distance="4000" class="parallax mountain-1"> -->
+data-distance="4000" class="parallax mountain-1"> -->
 <img src="img/sun_rays.png" class="sun-rays hide">
 <img src="img/black_shadow.png" class="black-shadow hide">
 <!-- <img src="img/fog_1.png" data-speedx="0.12" data-speedy="0.01" data-speedz="0" data-rotation="0"
-    data-distance="4200" class="parallax fog-1"> -->
-    <aside class="sidebar">
-    <div class="logo">
-    </div>
+data-distance="4200" class="parallax fog-1"> -->
+<aside class="sidebar">
+<div class="logo">
+</div>
 
 
 
 
-    <script src="vanilla-tilt.js"></script>
-    <script src="js/gsap.min.js"></script>
-    <script src="js/new.js" defer></script>
+<script src="vanilla-tilt.js"></script>
+<script src="js/gsap.min.js"></script>
+<script src="js/new.js" defer></script>
 
 </body>
 </html>
