I really want an ice sword
like i really want an ice sword

--- a/service.html
+++ b/service.html
@@ -43,7 +43,7 @@
     <div class="card" data-tilt>
         <div class="wrapper">
             <div class="profile">
-                <img src="profile.jpg" alt="">
+                <img src="./img/IMG_3816.jpg" alt="">
             </div>
             <h2>Offer1</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
@@ -54,7 +54,7 @@
     <div class="card" data-tilt>
         <div class="wrapper">
             <div class="profile">
-                <img src="profile.jpg" alt="">
+                <img src="./images/nightime2.jpg" alt="">
             </div>
             <h2>Offer2</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
@@ -65,7 +65,7 @@
     <div class="card" data-tilt>
         <div class="wrapper">
             <div class="profile">
-                <img src="profile.jpg" alt="">
+                <img src="./images/rack.jpg" alt="">
             </div>
             <h2>Offer3</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
@@ -76,7 +76,7 @@
     <div class="card" data-tilt>
         <div class="wrapper">
             <div class="profile">
-                <img src="profile.jpg" alt="">
+                <img src="./images/water.jpg" alt="">
             </div>
             <h2>Offer4</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
@@ -90,13 +90,13 @@
     data-distance="-200" class="parallax bg-img"> -->
 <!-- <img src="img/fog_7.png" data-speedx="0.27" data-speedy="0.32" data-speedz="0" data-rotation="0" data-distance="850"
     class="parallax fog-7"> -->
-<img src="img/Untitled-design-2023-08-10T093341.090-removebg-preview.png" data-speedx="0.195" data-speedy="0.305" data-speedz="0" data-rotation="0"
+<img src="./img/Untitled-design-2023-08-10T093341.090-removebg-preview.png" data-speedx="0.195" data-speedy="0.305" data-speedz="0" data-rotation="0"
     data-distance="1100" class="parallax mountain-10">
 <!-- <img src="img/fog_6.png" data-speedx="0.25" data-speedy="0.28" data-speedz="0" data-rotation="0"
     data-distance="1400" class="parallax fog-6"> -->
-<img src="img/unnamed__2_-removebg-preview (1).png" data-speedx="0.125" data-speedy="0.155" data-speedz="0.15" data-rotation="0.02"
+<img src="./img/isaman-removebg-preview.png" data-speedx="0.125" data-speedy="0.155" data-speedz="0.15" data-rotation="0.02"
     data-distance="1700" class="parallax mountain-9">
-<img src="./img/01_Keith_Isaacs_Short_Mountain_House_SPA-removebg-preview (1).png" data-speedx="0.1" data-speedy="0.11" data-speedz="0" data-rotation="0.02"
+<img src="./img/log-cabin-7193284_960_720.webp" data-speedx="0.1" data-speedy="0.11" data-speedz="0" data-rotation="0.02"
     data-distance="1800" class="parallax mountain-8">
 <div class="text parallax" data-speedx="0.07" data-speedy="0.07" data-speedz="0" data-rotation="0.11">
     <h2>ShutterScope</h2>
@@ -104,7 +104,7 @@
 </div>
 <img src="./img/What-trees-do-for-our-planet-1080x675-ai-brush-removebg-cm0ll5ti.png" data-speedx="0.0235" data-speedy="0.013" data-speedz="0.42" data-rotation="0.15"
     data-distance="3800" class="parallax mountain-2">
-<img src="img/unnamed__2_-removebg-preview.png" data-speedx="0.027" data-speedy="0.018" data-speedz="0.53" data-rotation="0.2"
+<img src="./img/unnamed__2_-removebg-preview.png" data-speedx="0.027" data-speedy="0.018" data-speedz="0.53" data-rotation="0.2"
     data-distance="4000" class="parallax mountain-1">
 <img src="img/sun_rays.png" class="sun-rays hide">
 <img src="img/black_shadow.png" class="black-shadow hide">
