--- a/index.html
+++ b/index.html
@@ -112,16 +112,8 @@
           <hr>
           <h4>Account</h4>
           <li>
-            <span class="material-symbols-outlined">bar_chart</span>
-            <a href="overview.html">Overview</a>
-          </li>
-          <li>
             <span class="material-symbols-outlined">mail</span>
-            <a href="contact.html">Message</a>
-          </li>
-          <li>
-            <span class="material-symbols-outlined">settings</span>
-            <a href="#">Settings</a>
+            <a href="./contact.html">contact</a>
           </li>
           <li class="logout-link">
             <span class="material-symbols-outlined">logout</span>
