--- a/about.html
+++ b/about.html
@@ -1,142 +1,146 @@
 <!doctype html>
 <html>
 <head>
-    <title>ShutterScope</title>
-    <link rel="stylesheet" type="text/css" href="about.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <link rel="icon" type="image/png" href="./img/favicon-16x16.png">
+<title>ShutterScope</title>
+<link rel="stylesheet" type="text/css" href="about.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+<link rel="icon" type="image/png" href="./img/favicon-16x16.png">
 </head>
 <body>
 
     <header class="hide">
         <nav>
-            <img src="#" alt="Logo" class="logo">
+            <img src="#" alt="" class="logo">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="login.html">Sign up</a></li>
-                <li class="search"><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                <li class="hamburger"><a href="#"><div class="bar"></div></a></li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            <li>
+                <a href="login.html">Login</a>
+            </li>
+            <li>
+                <a href="login.html">Sign up</a>
+            </li>
+            <li class="search">
+                <a href="#">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+            </li>
+            <li class="hamburger">
+                <a href="#">
+                <div class="bar"></div>
+                </a>
+            </li>
             </ul>
         </nav>
-    </header>
+        </header>
 
-    <section>
-        <img src="./Images/bg.jpg" id="bg" alt="Background">
-        <h2 id="text">ShutterScope</h2>
-        <img src="./Images/man.png" id="man" alt="Man">
-        <img src="./Images/clouds_1.png" id="clouds_1" alt="Clouds 1">
-        <img src="./Images/clouds_2.png" id="clouds_2" alt="Clouds 2">
-        <img src="./Images/mountain_left.png" id="mountain_left" alt="Mountain Left">
-        <img src="./Images/mountain_right.png" id="mountain_right" alt="Mountain Right">
-        <div class="cards-container">
-            <div class="card" data-tilt>
-                <div class="wrapper">
-                    <div class="profile">
-                        <img src="./img/IMG_3816.jpg" alt="Profile 1">
-                    </div>
-                    <h2>Offer1</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-                    <a href="#">N/A</a>
-                </div>
+<section>
+    <img src="./Images/bg.jpg" id="bg" >
+    <h2 id="text">ShutterScope</h2>
+    <img src="./Images/man.png" id="man">
+    <img src="./Images/clouds_1.png" id="clouds_1">
+    <img src="./Images/clouds_2.png" id="clouds_2">
+    <img src="./Images/mountain_left.png" id="mountain_left">
+    <img src="./Images/mountain_right.png" id="mountain_right">
+
+</section>
+<div class="sec">
+    <div class="content">
+    <h2>About ShutterScope</h2>
+    <p>i dont knowz</p>
+    </div>
+</div class="sec">
+<div class="cards-container">
+    <div class="card" data-tilt>
+        <div class="wrapper">
+            <div class="profile">
+                <img src="./img/unnamed (6).jpg" alt="">
             </div>
-            <div class="card" data-tilt>
-                <div class="wrapper">
-                    <div class="profile">
-                        <img src="./images/nightime2.jpg" alt="Profile 2">
-                    </div>
-                    <h2>Offer2</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-                    <a href="#">N/A</a>
-                </div>
-            </div>
-            <div class="card" data-tilt>
-                <div class="wrapper">
-                    <div class="profile">
-                        <img src="./images/rack.jpg" alt="Profile 3">
-                    </div>
-                    <h2>Offer3</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-                    <a href="#">N/A</a>
-                </div>
-            </div>
-            <div class="card" data-tilt>
-                <div class="wrapper">
-                    <div class="profile">
-                        <img src="./images/water.jpg" alt="Profile 4">
-                    </div>
-                    <h2>Offer4</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
-                    <a href="#">N/A</a>
-                </div>
-            </div>
+            <h2>Vedant</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+            <a href="#">Chairman</a>
         </div>
-    </section>
-
-    <div class="sec">
-        <div class="content">
-            <h2>About ShutterScope</h2>
-            <p>At ShutterScope, adaptation and adjustment are not just buzzwords; they're embedded in our DNA. We stay ahead of the curve, constantly evolving to meet the ever-changing demands of the industry while staying true to our core values of creativity, integrity, and excellence.
-            Join us on this exhilarating journey as we capture moments, tell stories, and leave a lasting imprint on the world of photography and media. Welcome to ShutterScope, where every frame tells a story, and every click is a step towards greatness.</p>
+    </div>
+    
+    <div class="card" data-tilt>
+        <div class="wrapper">
+            <div class="profile">
+                <img src="./img/unnamed (5).jpg" alt="">
+            </div>
+            <h2>Sabrina</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+            <a href="#">CEO</a>
+        </div>
+    </div>
+    
+    <div class="card" data-tilt>
+        <div class="wrapper">
+            <div class="profile">
+                <img src="./img/IMG_3816.jpg" alt="">
+            </div>
+            <h2>Stryder</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+            <a href="#">CFO</a>
         </div>
     </div>
 
-    <script src="vanilla-tilt.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/ScrollTrigger.min.js"></script>
-    <script type="text/javascript">
-        window.addEventListener('load', function() {
-            document.querySelector('.content').classList.add('loaded');
-        });
+<script src="vanilla-tilt.js"></script>
 
-        gsap.to("#bg", {
-            scrollTrigger: {
-                scrub: 1
-            }, 
-            scale: 1.5
-        });
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/ScrollTrigger.min.js"></script>
+<script type="text/javascript">
 
-        gsap.to("#man", {
-            scrollTrigger: {
-                scrub: 1
-            }, 
-            scale: 0.5
-        });
+    window.addEventListener('load', function() {
+    document.querySelector('.content').classList.add('loaded');
+    });
 
-        gsap.to("#mountain_left", {
-            scrollTrigger: {
-                scrub: 1
-            }, 
-            x: -500
-        });
+    gsap.to("#bg", {
+    scrollTrigger: {
+    scrub: 1
+    }, 
+    scale: 1.5
+    });
 
-        gsap.to("#mountain_right", {
-            scrollTrigger: {
-                scrub: 1
-            }, 
-            x: 500
-        });
+    gsap.to("#man", {
+    scrollTrigger: {
+    scrub: 1
+    }, 
+    scale: 0.5
+    });
 
-        gsap.to("#clouds_1", {
-            scrollTrigger: {
-                scrub: 1
-            }, 
-            x: 200
-        });
+    gsap.to("#mountain_left", {
+    scrollTrigger: {
+    scrub: 1
+    }, 
+    x: -500,
+    });
+    gsap.to("#mountain_right", {
+    scrollTrigger: {
+    scrub: 1
+    }, 
+    x: 500,
+    });
 
-        gsap.to("#clouds_2", {
-            scrollTrigger: {
-                scrub: 1
-            }, 
-            x: -200
-        });
+    gsap.to("#clouds_1", {
+    scrollTrigger: {
+    scrub: 1
+    }, 
+    x: 200,
+    });
+    gsap.to("#clouds_2", {
+    scrollTrigger: {
+    scrub: 1
+    }, 
+    x: -200,
+    });
 
-        gsap.to("#text", {
-            scrollTrigger: {
-                scrub: 1
-            }, 
-            y: 500
-        });
-    </script>
+    gsap.to("#text", {
+    scrollTrigger: {
+    scrub: 1
+    }, 
+    y: 500,
+    });
+</script>
 </body>
 </html>
