Erm what the sigma
hjkl

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <h4>Advanced</h4>
           <li>
             <span class="material-symbols-outlined">group</span>
-            <a href="#">Mentorship</a>
+            <a href="./MentorShip.html">Mentorship</a>
           </li>
           <hr>
           <h4>Account</h4>
