Chick Fil A hates The Gay
BBL Drizzy

--- a/MentorShip.html
+++ b/MentorShip.html
@@ -9,7 +9,7 @@
 
     <!--=============== REMIXICONS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.min.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
@@ -151,6 +151,44 @@
         </div>
         </section>
     </main>
+
+    
+    <aside class="sidebar">
+        <div class="logo">
+            <img src="#" alt="">
+        </div>
+        <ul class="links">
+            <h4>Main Menu</h4>
+            <li>
+            <span class="material-symbols-outlined">dashboard</span>
+            <a href="./gallery.html">gallery</a>
+            </li>
+            <li>
+            <span class="material-symbols-outlined">show_chart</span>
+            <a href="./about.html">about</a>
+            </li>
+            <li>
+            <span class="material-symbols-outlined">flag</span>
+            <a href="./service.html">service</a>
+            </li>
+            <hr>
+            <h4>Advanced</h4>
+            <li>
+            <span class="material-symbols-outlined">group</span>
+            <a href="#">Mentorship</a>
+            </li>
+            <hr>
+            <h4>Account</h4>
+            <li>
+            <span class="material-symbols-outlined">mail</span>
+            <a href="contact.html">contact</a>
+            </li>
+            <li class="logout-link">
+            <span class="material-symbols-outlined">logout</span>
+            <a href="#">Logout</a>
+            </li>
+        </ul>
+        </aside>
 
     <video id="myVideo" playsinline autoplay muted>
         <source src="./videos/copy_5064DD60-3FE1-49D9-842C-6557E728EB9D.mp4" type="video/mp4">
