--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,49 @@
 <title>ShutterScope</title>
 <link rel="stylesheet" type="text/css" href="contact.css">
 <link rel="icon" type="image/png" href="./img/favicon-16x16.png">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+
 
 </head>
 <body>
 
+
+    <aside class="sidebar">
+        <div class="logo">
+        </div>
+        <ul class="links">
+            <h4>Main Menu</h4>
+            <li>
+            <span class="material-symbols-outlined">dashboard</span>
+            <a href="./gallery.html">gallery</a>
+            </li>
+            <li>
+            <span class="material-symbols-outlined">show_chart</span>
+            <a href="./about.html">about</a>
+            </li>
+            <li>
+            <span class="material-symbols-outlined">flag</span>
+            <a href="./service.html">service</a>
+            </li>
+            <hr>
+            <h4>Advanced</h4>
+            <li>
+            <span class="material-symbols-outlined">group</span>
+            <a href="./MentorShip.html">Mentorship</a>
+            </li>
+            <hr>
+            <h4>Account</h4>
+            <li>
+            <span class="material-symbols-outlined">mail</span>
+            <a href="./contact.html">contact</a>
+            </li>
+            <li class="logout-link">
+            <span class="material-symbols-outlined">logout</span>
+            <a href="#">Logout</a>
+            </li>
+        </ul>
+        </aside>
+    
 <header class="hide">
 <nav>
 <img src="#" alt="" class="logo">
