Vedant wants to touch me
szHRyfu]
'

--- a/login.html
+++ b/login.html
@@ -92,13 +92,13 @@
     <h4>Advanced</h4>
     <li>
     <span class="material-symbols-outlined">group</span>
-    <a href="#">Mentorship</a>
+    <a href="MentorShip.html">Mentorship</a>
     </li>
     <hr>
     <h4>Account</h4>
     <li>
     <span class="material-symbols-outlined">mail</span>
-    <a href="contact.html">Message</a>
+    <a href="contact.html">Contact</a>
     </li>
     <li class="logout-link">
     <span class="material-symbols-outlined">logout</span>
