Vedant calls Daniel Daddy
unironically

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
             <img src="./img/unnamed (6).jpg" alt="">
         </div>
         <h2>Vedant</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+        <p>Vedant Singh, a dedicated photographer at ShutterScope, excels in various photography styles, camera technologies, and editing techniques. </p>
         <a href="#">Chairman</a>
     </div>
 </div>
@@ -120,7 +120,7 @@
             <img src="./img/unnamed (5).jpg" alt="">
         </div>
         <h2>Sabrina</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+        <p>Sabrina Shafer, CEO of ShutterScope, is the visionary driving the company's success. With a keen eye for innovation and business strategy, Sabrina leads the team towards excellence.</p>
         <a href="#">CEO</a>
     </div>
 </div>
@@ -131,7 +131,7 @@
             <img src="./img/IMG_3816.jpg" alt="">
         </div>
         <h2>Stryder</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi ipsum sapiente velit dicta quisquam iusto magni dolores.</p>
+        <p>Stryder Bateman is the Chief Financial Officer at Shutterscope Studios, overseeing financial management, budgeting, and strategic planning to ensure the company's fiscal health and growth.</p>
         <a href="#">CFO</a>
     </div>
 </div>
